Добавила разметку формы

--- a/source/index.html
+++ b/source/index.html
@@ -14,9 +14,9 @@
 
       <nav class="header__nav nav">
         <ul class="nav__list">
-          <a href="" class="nav__item">Главная</a>
-          <a href="" class="nav__item">Фотографии</a>
-          <a href="" class="nav__item">Конкурс</a>
+          <a class="nav__item">Главная</a>
+          <a href="catalog.html" class="nav__item">Фотографии</a>
+          <a href="form.html" class="nav__item">Конкурс</a>
           <a href="" class="nav__item">HTML Academy</a>
         </ul>
       </nav>
@@ -168,7 +168,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="page-footer__logo" href="">
+      <a class="page-footer__logo" href="#">
         <img src="./img/logo-pink-footer.svg" alt="Логотип приложения PINK">
       </a>
       <div class="page-footer social">
@@ -197,9 +197,11 @@
         </ul>
         <div class="page-footer__copyright copyright">
           <p class="copyright__developed">Разработано
-            <svg class="copyright__icon" width="27" height="34">
-              <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
-            </svg>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"></a>
+              <svg class="copyright__icon" width="27" height="34">
+                <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
+              </svg>
+            </a>
           </p>
         </div>
       </div>
