Добавила разметку галереи

--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
       <nav class="header__nav nav">
         <ul class="nav__list">
           <a class="nav__item">Главная</a>
-          <a href="catalog.html" class="nav__item">Фотографии</a>
+          <a href="gallery.html" class="nav__item">Фотографии</a>
           <a href="form.html" class="nav__item">Конкурс</a>
           <a href="" class="nav__item">HTML Academy</a>
         </ul>
