--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
       <nav class="header__nav nav">
         <ul class="nav__list">
           <a href="index.html" class="nav__item">Главная</a>
-          <a href="catalog.html" class="nav__item">Фотографии</a>
+          <a href="gallery.html" class="nav__item">Фотографии</a>
           <a class="nav__item">Конкурс</a>
           <a href="" class="nav__item">HTML Academy</a>
         </ul>
@@ -25,7 +25,7 @@
     <main class="form-page">
       <h1 class="form-page__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
 
-      <form class="form-page__form form"action="https://echo.htmlacademy.ru"  method="post">
+      <form class="form-page__form form" action="https://echo.htmlacademy.ru"  method="post">
         <fieldset class="form__user-data user-data">
           <legend class="visually-hidden">Ваше полное имя</legend>
             <ul class="user-data__list">
@@ -55,10 +55,10 @@
               <input class="achievs__input" type="checkbox" id="sunburnt" name="sunburnt" checked>
               <label class="achievs__label" for="sunburnt">Обгорел на пляже</label>
             </li>
-           <li>
+            <li>
               <input class="achievs__input" type="checkbox" id="seen-chuck" name="seen-chuck">
               <label class="achievs__label" for="seen-chuck">Видел Чака Норриса</label>
-           </li>
+            </li>
             <li>
               <input class="achievs__input" type="checkbox" id="souvenirs" name="souvenirs">
               <label class="achievs__label" for="souvenirs">Накупил сувениров</label>
