--- a/source/form.html
+++ b/source/form.html
@@ -2,22 +2,25 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css">
     <title>HTML Academy: Пинк</title>
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header">
-      <a href="#" class="page-header__logo">
-        <img class="page-header__logo-image" src="./img/logo-mobile.svg" alt="Логотип приложения Pink">
-      </a>
+      <div class="page-header__wrapper">
+        <a href="#" class="page-header__logo">
+          <img class="page-header__logo-image" src="./img/logo-mobile.svg" alt="Логотип приложения Pink">
+        </a>
 
-      <button class="header__button" aria-label="Кнопка показа меню сайта">бургер</button>
+        <button class="page-header__button page-header__button--no-js page-header__button--menu-closed" aria-label="Кнопка показа меню сайта"></button>
 
-      <nav class="header__nav nav">
+      </div>
+      <nav class="page-header__nav nav">
         <ul class="nav__list">
-          <a href="index.html" class="nav__item">Главная</a>
-          <a href="gallery.html" class="nav__item">Фотографии</a>
-          <a class="nav__item">Конкурс</a>
-          <a href="" class="nav__item">HTML Academy</a>
+          <li><a href="index.html" class="nav__item">Главная</a></li>
+          <li><a href="gallery.html" class="nav__item">Фотографии</a></li>
+          <li><a class="nav__item">Конкурс</a></li>
+          <li><a href="" class="nav__item">HTML Academy</a></li>
         </ul>
       </nav>
     </header>
@@ -85,6 +88,7 @@
               <label class="user-contacts__label" for="email">Адрес почты</label>
               <input class="user-contacts__input" type="text" placeholder="Введите почту*" id="email">
             </li>
+          </ul>
         </fieldset>
 
         <fieldset class="form__choose-os choose-os">
@@ -111,8 +115,8 @@
           <textarea class="desc-emotions__textarea" name="desc-emotions" cols="30" rows="10">Можно прям в красках, не стесняясь в выражениях</textarea>
         </fieldset>
 
-        <button clas="form__submit" type="submit">отправить форму</button>
-        <p form__legend>*- обязательные поля</p>
+        <button class="form__submit" type="submit">отправить форму</button>
+        <p class="form__legend">*- обязательные поля</p>
       </form>
 
     </main>
@@ -124,36 +128,36 @@
       <div class="page-footer social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="https://mobile.twitter.com" aria-label="ссылка на сайт Twitter">
+            <a class="social__link" href="https://mobile.twitter.com" aria-label="ссылка на сайт Twitter">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="img/sprite.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.facebook.com" aria-label="ссылка на сайт Facebook">
+            <a class="social__link" href="https://www.facebook.com" aria-label="ссылка на сайт Facebook">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="img/sprite.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.youtube.com" aria-label="ссылка на сайт Youtube">
+            <a class="social__link" href="https://www.youtube.com" aria-label="ссылка на сайт Youtube">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
             </a>
           </li>
         </ul>
-        <div class="page-footer__copyright copyright">
-          <p class="copyright__developed">Разработано
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg class="copyright__icon" width="27" height="34">
-                <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
-              </svg>
-            </a>
-          </p>
-        </div>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__developed">Разработано
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg class="copyright__icon" width="27" height="34">
+              <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
+            </svg>
+          </a>
+        </p>
       </div>
     </footer>
 
@@ -168,5 +172,7 @@
       <p class="form-popup__message">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       <button class="form-popup__close-btn" type="button">ок</button>
     </div>
+
+    <script src="js/menu.js"></script>
   </body>
 </html>
