--- a/source/gallery.html
+++ b/source/gallery.html
@@ -2,22 +2,25 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css">
     <title>HTML Academy: Пинк</title>
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header">
-      <a href="#" class="page-header__logo">
-        <img class="page-header__logo-image" src="./img/logo-mobile.svg" alt="Логотип приложения Pink">
-      </a>
+      <div class="page-header__wrapper">
+        <a href="#" class="page-header__logo">
+          <img class="page-header__logo-image" src="./img/logo-mobile.svg" alt="Логотип приложения Pink">
+        </a>
 
-      <button class="header__button" aria-label="Кнопка показа меню сайта">бургер</button>
+        <button class="page-header__button page-header__button--no-js page-header__button--menu-closed" aria-label="Кнопка показа меню сайта"></button>
 
-      <nav class="header__nav nav">
+      </div>
+      <nav class="page-header__nav nav">
         <ul class="nav__list">
-          <a href="index.html" class="nav__item">Главная</a>
-          <a class="nav__item">Фотографии</a>
-          <a href="form.html" class="nav__item">Конкурс</a>
-          <a href="" class="nav__item">HTML Academy</a>
+          <li><a href="index.html" class="nav__item">Главная</a></li>
+          <li><a class="nav__item">Фотографии</a></li>
+          <li><a href="form.html" class="nav__item">Конкурс</a></li>
+          <li><a href="" class="nav__item">HTML Academy</a></li>
         </ul>
       </nav>
     </header>
@@ -146,7 +149,7 @@
                     <use xlink:href="img/sprite.svg#crop-icon"></use>
                   </svg>
                 </button>
-                <div clacc="edit__effect-level">
+                <div class="edit__effect-level">
                   <div class="edit__scale"></div>
                   <button class="edit__scale-btn"></button>
                 </div>
@@ -157,7 +160,7 @@
                     <use xlink:href="img/sprite.svg#fill-icon"></use>
                   </svg>
                 </button>
-                <div clacc="edit__effect-level">
+                <div class="edit__effect-level">
                   <div class="edit__scale"></div>
                   <button class="edit__scale-btn"></button>
                 </div>
@@ -168,13 +171,13 @@
                     <use xlink:href="img/sprite.svg#contrast-icon"></use>
                   </svg>
                 </button>
-                <div clacc="edit__effect-level">
+                <div class="edit__effect-level">
                   <div class="edit__scale"></div>
                   <button class="edit__scale-btn"></button>
                 </div>
               </li>
             </ul>
-            <div clacc="edit__effect-level--mobile">
+            <div class="edit__effect-level--mobile">
               <div class="edit__scale"></div>
               <button class="edit__scale-btn"></button>
             </div>
@@ -195,38 +198,39 @@
       <div class="page-footer social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="https://mobile.twitter.com" aria-label="ссылка на сайт Twitter">
+            <a class="social__link" href="https://mobile.twitter.com" aria-label="ссылка на сайт Twitter">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="img/sprite.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.facebook.com" aria-label="ссылка на сайт Facebook">
+            <a class="social__link" href="https://www.facebook.com" aria-label="ссылка на сайт Facebook">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="img/sprite.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.youtube.com" aria-label="ссылка на сайт Youtube">
+            <a class="social__link" href="https://www.youtube.com" aria-label="ссылка на сайт Youtube">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
             </a>
           </li>
         </ul>
-        <div class="page-footer__copyright copyright">
-          <p class="copyright__developed">Разработано
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg class="copyright__icon" width="27" height="34">
-                <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
-              </svg>
-            </a>
-          </p>
-        </div>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__developed">Разработано
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg class="copyright__icon" width="27" height="34">
+              <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
+            </svg>
+          </a>
+        </p>
       </div>
     </footer>
 
+    <script src="js/menu.js"></script>
   </body>
 </html>
