--- a/source/index.html
+++ b/source/index.html
@@ -2,32 +2,36 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css">
     <title>HTML Academy: Пинк</title>
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header">
-      <a href="#" class="page-header__logo">
-        <img class="page-header__logo-image" src="./img/logo-mobile.svg" alt="Логотип приложения Pink">
-      </a>
+      <div class="page-header__wrapper">
+        <a href="#" class="page-header__logo">
+          <img class="page-header__logo-image" src="./img/logo-mobile.svg" alt="Логотип приложения Pink">
+        </a>
 
-      <button class="header__button" aria-label="Кнопка показа меню сайта">бургер</button>
+        <button class="page-header__button page-header__button--no-js page-header__button--menu-closed" aria-label="Кнопка показа меню сайта"></button>
 
-      <nav class="header__nav nav">
+      </div>
+      <nav class="page-header__nav nav">
         <ul class="nav__list">
-          <a class="nav__item">Главная</a>
-          <a href="gallery.html" class="nav__item">Фотографии</a>
-          <a href="form.html" class="nav__item">Конкурс</a>
-          <a href="" class="nav__item">HTML Academy</a>
+          <li><a class="nav__item">Главная</a></li>
+          <li><a href="gallery.html" class="nav__item">Фотографии</a></li>
+          <li><a href="form.html" class="nav__item">Конкурс</a></li>
+          <li><a href="" class="nav__item">HTML Academy</a></li>
         </ul>
       </nav>
     </header>
 
     <main class="page-main">
       <h1 class="visually-hidden">Сайт фотоприложения для раскрашивания серых будней</h1>
+
       <section class="page-main__promo promo">
         <h2 class="visually-hidden">Где можно скачать приложение</h2>
-        <p class="promo__slogan">Взгляните на жизнь иначе!</p>
-        <img class="promo__img" src="./img/phone-mobile.png" alt="Изображение белого смартфона в руке">
+        <p class="promo__slogan">Взгляните на жизнь<br/>иначе!</p>
+        <img class="promo__img" src="./img/phone-with-hand-mobile.png" alt="Изображение белого смартфона в руке" width="320" height="286">
         <a class="promo__btn" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
         <ul class="promo__stores stores">
           <li class="stores__item">
@@ -49,11 +53,10 @@
         <p class="promo__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </section>
       <div class="page-main offer">
-        <p class="offer__paragraph">
-          <span class="offer__text">Устали от серости мегаполиса?</span>
-          <span class="offer__text">Нам есть, что вам предложить!</span>
-        </p>
+        <p class="offer__text">Устали от серости мегаполиса?</p>
+        <p class="offer__text">Нам есть, что вам предложить!</p>
       </div>
+
       <section class="page-main advantages">
         <h2 class="visually-hidden">Преимущества приложения</h2>
           <ul class="advantages__list">
@@ -71,12 +74,14 @@
             </li>
           </ul>
       </section>
+
       <section class="page-main promise">
         <h2 class="visually-hidden">Эффект от использования приложения</h2>
         <b class="promise__statement">Эффект на 24 часа!</b>
         <p class="promise__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
         <a class="promise__link " href="">Узнать больше об исследовании</a>
       </section>
+
       <section class="page-main__reviews reviews">
         <h2 class="visually-hidden">Отзывы пользователей</h2>
         <div class="reviews__list">
@@ -85,85 +90,97 @@
             <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </blockquote>
         </div>
-        <div class="slider__toggles toggles">
-          <button class="toggles__item toggles__item--current" type="button"></button>
-          <button class="toggles__item" type="button"></button>
-          <button class="toggles__item" type="button"></button>
+        <div class="reviews__toggles toggles">
+          <span class="toggles__item toggles__item--current"></span>
+          <span class="toggles__item"></span>
+          <span class="toggles__item"></span>
         </div>
       </section>
+
       <section class="page-main price">
+        <h2 class="visually-hidden">Тарифные планы</h2>
         <table class="price__table">
-          <tr class="price__table">
-            <th>База</th>
-            <th>Стандарт</th>
-            <th>Анлим</th>
+          <tr>
+            <th class="price__heading">
+              <span class="price__heading-name">База</span><br/>
+              <span class="price__heading-price">1,99 USD</span>
+            </th>
+            <th class="price__heading">
+              <span class="price__heading-name">Стандарт</span><br/>
+              <span class="price__heading-price">3,99 USD</span>
+            </th>
+            <th class="price__heading">
+              <span class="price__heading-name">Анлим</span><br/>
+              <span class="price__heading-price">9,99 USD</span>
+            </th>
           </tr>
           <tr>
-            <td>
-              <span>Розовый фильтр</span>
-              <img src="./img/green-check.svg" alt="зеленая галочка">
+            <td class="price__cell">
+              <span class="price__cell-item">Розовый фильтр</span>
+              <img class="price__cell-img price__cell-img--check" src="./img/green-check.svg" alt="зеленая галочка">
             </td>
-            <td>
-              <span>Розовый фильтр</span>
-              <img src="./img/green-check.svg" alt="зеленая галочка">
+            <td class="price__cell">
+              <span class="price__cell-item">Розовый фильтр</span>
+              <img class="price__cell-img price__cell-img--check" src="./img/green-check.svg" alt="зеленая галочка">
             </td>
-            <td>
-              <span>Розовый фильтр</span>
-              <img src="./img/green-check.svg" alt="зеленая галочка">
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <span>Смайлики</span>
-              <img src="./img/red-cross.svg" alt="красный крестик">
-            </td>
-            <td>
-              <span>Смайлики</span>
-              <img src="./img/green-check.svg" alt="зеленая галочка">
-            </td>
-            <td>
-              <span>Смайлики</span>
-              <img src="./img/green-check.svg" alt="зеленая галочка">
+            <td class="price__cell">
+              <span class="price__cell-item">Розовый фильтр</span>
+              <img class="price__cell-img price__cell-img--check" src="./img/green-check.svg" alt="зеленая галочка">
             </td>
           </tr>
           <tr>
-            <td>
-              <span>Комментарии</span>
-              <img src="./img/red-cross.svg" alt="красный крестик">
+            <td class="price__cell">
+              <span class="price__cell-item">Смайлики</span>
+              <img class="price__cell-img price__cell-img--cross" src="./img/red-cross.svg" alt="красный крестик">
             </td>
-            <td>
-              <span>Комментарии</span>
-              <img src="./img/red-cross.svg" alt="красный крестик">
+            <td class="price__cell">
+              <span class="price__cell-item">Смайлики</span>
+              <img class="price__cell-img price__cell-img--check" src="./img/green-check.svg" alt="зеленая галочка">
             </td>
-            <td>
-              <span>Комментарии</span>
-              <img src="./img/green-check.svg" alt="зеленая галочка">
+            <td class="price__cell">
+              <span class="price__cell-item">Смайлики</span>
+              <img class="price__cell-img price__cell-img--check" src="./img/green-check.svg" alt="зеленая галочка">
+            </td>
+          </tr>
+          <tr>
+            <td class="price__cell">
+              <span class="price__cell-item">Комментарии</span>
+              <img class="price__cell-img price__cell-img--cross" src="./img/red-cross.svg" alt="красный крестик">
+            </td>
+            <td class="price__cell">
+              <span class="price__cell-item">Комментарии</span>
+              <img class="price__cell-img price__cell-img--cross" src="./img/red-cross.svg" alt="красный крестик">
+            </td>
+            <td class="price__cell">
+              <span class="price__cell-item">Комментарии</span>
+              <img class="price__cell-img price__cell-img--check" src="./img/green-check.svg" alt="зеленая галочка">
             </td>
           </tr>
         </table>
-        <div class="slider__toggles toggles">
-          <button class="toggles__item" type="button"></button>
-          <button class="toggles__item toggles__item--current" type="button"></button>
-          <button class="toggles__item" type="button"></button>
+        <div class="price__toggles toggles">
+          <span class="toggles__item"></span>
+          <span class="toggles__item toggles__item--current"></span>
+          <span class="toggles__item"></span>
         </div>
       </section>
+
       <section class="page-main__contacts contacts">
-        <h2 class="visually-hiddenx">Контакты</h2>
-        <p>Остались вопросы? Свяжитесь с нами!</p>
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="contacts__call-to-action">Остались вопросы?<br/> Свяжитесь с нами!</p>
         <p class="contacts__phone">
-          <span>Звоните:</span>
-          <a href="tel:+78125556666">+7 (812) 555-66-66</a>
+          <span class="contacts__call-us">Звоните:</span>
+          <a class="contacts__phone-number" href="tel:+78125556666">+7 (812) 555-66-66</a>
         </p>
-        <p>
-          <span>Пишите:</span>
-          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        <p  class="contacts__email">
+          <span class="contacts__write-us">Пишите:</span>
+          <a class="contacts__email-address" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
         <p class="contacts__addres">
-          <span>Приезжайте в гости:</span>
-          <span>ул. Большая</br>Конюшенная, 19/8</span>
+          <span class="contacts__visit-us">Приезжайте в гости:</span>
+          <span class="contacts__where">ул. Большая<br/>Конюшенная, 19/8</span>
         </p>
         <div class="contacts__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533268!2d30.320858716070596!3d59.938716481876156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1606858472107!5m2!1sru!2sru" width="100%" height="200"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533268!2d30.320858716070596!3d59.938716481876156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1606858472107!5m2!1sru!2sru" height="200"></iframe>
         </div>
       </section>
     </main>
@@ -174,37 +191,38 @@
       <div class="page-footer social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="https://mobile.twitter.com" aria-label="ссылка на сайт Twitter">
+            <a class="social__link" href="https://mobile.twitter.com" aria-label="ссылка на сайт Twitter">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="img/sprite.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.facebook.com" aria-label="ссылка на сайт Facebook">
+            <a class="social__link" href="https://www.facebook.com" aria-label="ссылка на сайт Facebook">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="img/sprite.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.youtube.com" aria-label="ссылка на сайт Youtube">
+            <a class="social__link" href="https://www.youtube.com" aria-label="ссылка на сайт Youtube">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
             </a>
           </li>
         </ul>
-        <div class="page-footer__copyright copyright">
-          <p class="copyright__developed">Разработано
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"></a>
-              <svg class="copyright__icon" width="27" height="34">
-                <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
-              </svg>
-            </a>
-          </p>
-        </div>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__developed">Разработано
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg class="copyright__icon" width="27" height="34">
+              <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
+            </svg>
+          </a>
+        </p>
       </div>
     </footer>
+    <script src="js/menu.js"></script>
   </body>
 </html>
